// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`openapiSpec#models > should generate proper schema Adresse 1`] = `
{
  "additionalProperties": false,
  "description": "Adresse",
  "properties": {
    "academie": {
      "additionalProperties": false,
      "description": "Académie",
      "properties": {
        "code": {
          "description": "Code de l'académie",
          "examples": [
            "A1",
          ],
          "type": "string",
        },
        "id": {
          "description": "Identifiant de l'académie",
          "examples": [
            "1",
          ],
          "type": "string",
        },
        "nom": {
          "description": "Nom de l'académie",
          "examples": [
            "Académie de Paris",
          ],
          "type": "string",
        },
      },
      "required": [
        "id",
        "code",
        "nom",
      ],
      "type": "object",
    },
    "code_postal": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
      "description": "Code postal",
    },
    "commune": {
      "additionalProperties": false,
      "description": "Ville",
      "properties": {
        "code_insee": {
          "description": "Code INSEE de la ville",
          "type": "string",
        },
        "nom": {
          "description": "Nom de la ville",
          "type": "string",
        },
      },
      "required": [
        "nom",
        "code_insee",
      ],
      "type": "object",
    },
    "departement": {
      "additionalProperties": false,
      "description": "Département",
      "properties": {
        "code_insee": {
          "description": "Code INSEE du département",
          "type": "string",
        },
        "nom": {
          "description": "Nom du département",
          "type": "string",
        },
      },
      "required": [
        "nom",
        "code_insee",
      ],
      "type": "object",
    },
    "label": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
      "description": "Libellé de l'adresse",
    },
    "region": {
      "additionalProperties": false,
      "description": "Région",
      "properties": {
        "code_insee": {
          "description": "Code INSEE de la région",
          "type": "string",
        },
        "nom": {
          "description": "Nom de la région",
          "type": "string",
        },
      },
      "required": [
        "code_insee",
        "nom",
      ],
      "type": "object",
    },
  },
  "required": [
    "label",
    "code_postal",
    "commune",
    "departement",
    "region",
    "academie",
  ],
  "type": "object",
}
`;

exports[`openapiSpec#models > should generate proper schema CabinetAvocat 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "adresse": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
      "description": "Adresse postale du cabinet",
    },
    "barreau": {
      "description": "Barreau de rattachement",
      "type": "string",
    },
    "id": {
      "description": "Identifiant technique du cabinet",
      "type": "string",
    },
    "nom": {
      "description": "Nom du cabinet",
      "type": "string",
    },
    "siret": {
      "description": "Numero SIRET du cabinet",
      "pattern": "^\\d{14}$",
      "type": "string",
    },
    "ville": {
      "description": "Ville du cabinet",
      "type": "string",
    },
  },
  "required": [
    "id",
    "siret",
    "nom",
    "ville",
    "barreau",
    "adresse",
  ],
  "type": "object",
}
`;

exports[`openapiSpec#models > should generate proper schema GeoJsonPoint 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "coordinates": {
      "prefixItems": [
        {
          "description": "Longitude",
          "examples": [
            48.850699,
          ],
          "maximum": 180,
          "minimum": -180,
          "type": "number",
        },
        {
          "description": "Latitude",
          "examples": [
            2.308628,
          ],
          "maximum": 90,
          "minimum": -90,
          "type": "number",
        },
      ],
      "type": "array",
    },
    "type": {
      "const": "Point",
      "type": "string",
    },
  },
  "required": [
    "coordinates",
    "type",
  ],
  "type": "object",
}
`;

exports[`openapiSpec#models > should generate proper schema GeoJsonPolygon 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "coordinates": {
      "items": {
        "items": {
          "prefixItems": [
            {
              "description": "Longitude",
              "examples": [
                48.850699,
              ],
              "maximum": 180,
              "minimum": -180,
              "type": "number",
            },
            {
              "description": "Latitude",
              "examples": [
                2.308628,
              ],
              "maximum": 90,
              "minimum": -90,
              "type": "number",
            },
          ],
          "type": "array",
        },
        "type": "array",
      },
      "type": "array",
    },
    "type": {
      "const": "Polygon",
      "type": "string",
    },
  },
  "required": [
    "coordinates",
    "type",
  ],
  "type": "object",
}
`;

exports[`openapiSpec#models > should generate proper schema Organisme 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "contacts": {
      "description": "Contacts de l'organisme",
      "items": {
        "additionalProperties": false,
        "properties": {
          "confirmation_referentiel": {
            "description": "Indique si le contact a un statut "confirmé" sur le référentiel des organismes de formation",
            "type": "boolean",
          },
          "email": {
            "description": "Email du contact",
            "format": "email",
            "pattern": "^(?!\\.)(?!.*\\.\\.)([A-Za-z0-9_'+\\-\\.]*)[A-Za-z0-9_+-]@([A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$",
            "type": "string",
          },
          "sources": {
            "description": "Sources du contact",
            "items": {
              "type": "string",
            },
            "type": "array",
          },
        },
        "required": [
          "email",
          "sources",
          "confirmation_referentiel",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "etablissement": {
      "additionalProperties": false,
      "description": "Etablissement de l'organisme",
      "properties": {
        "adresse": {
          "anyOf": [
            {
              "$ref": "#/components/schemas/Adresse",
            },
            {
              "type": "null",
            },
          ],
          "description": "Adresse de l'établissement",
        },
        "creation": {
          "description": "Date de création de l'établissement",
          "format": "date-time",
          "type": "string",
        },
        "enseigne": {
          "anyOf": [
            {
              "minLength": 1,
              "type": "string",
            },
            {
              "type": "null",
            },
          ],
          "description": "Enseigne de l'établissement",
        },
        "fermeture": {
          "anyOf": [
            {
              "format": "date-time",
              "type": "string",
            },
            {
              "type": "null",
            },
          ],
          "description": "Date de fermeture de l'établissement",
        },
        "geopoint": {
          "anyOf": [
            {
              "$ref": "#/components/schemas/GeoJsonPoint",
            },
            {
              "type": "null",
            },
          ],
          "description": "Coordonnées GPS de l'établissement",
        },
        "ouvert": {
          "description": "Etablissement ouvert",
          "type": "boolean",
        },
        "siret": {
          "description": "Numéro SIRET de l'établissement",
          "pattern": "^\\d{14}$",
          "type": "string",
        },
      },
      "required": [
        "siret",
        "ouvert",
        "enseigne",
        "adresse",
        "geopoint",
        "creation",
        "fermeture",
      ],
      "type": "object",
    },
    "identifiant": {
      "additionalProperties": false,
      "description": "Identifiant de l'organisme",
      "properties": {
        "siret": {
          "description": "Numéro SIRET de l'organisme",
          "pattern": "^\\d{14}$",
          "type": "string",
        },
        "uai": {
          "anyOf": [
            {
              "pattern": "^\\d{7}[A-Z]$",
              "type": "string",
            },
            {
              "type": "null",
            },
          ],
          "description": "Numéro UAI de l'organisme",
        },
      },
      "required": [
        "uai",
        "siret",
      ],
      "type": "object",
    },
    "renseignements_specifiques": {
      "additionalProperties": false,
      "description": "Renseignements spécifiques",
      "properties": {
        "numero_activite": {
          "anyOf": [
            {
              "type": "string",
            },
            {
              "type": "null",
            },
          ],
          "description": "Numéro d'activité",
        },
        "qualiopi": {
          "description": "Qualiopi",
          "type": "boolean",
        },
      },
      "required": [
        "qualiopi",
        "numero_activite",
      ],
      "type": "object",
    },
    "statut": {
      "additionalProperties": false,
      "description": "Statut de l'organisme",
      "properties": {
        "referentiel": {
          "description": "Statut de l'organisme dans le réferentiel des organismes en apprentissage",
          "enum": [
            "présent",
            "supprimé",
          ],
          "type": "string",
        },
      },
      "required": [
        "referentiel",
      ],
      "type": "object",
    },
    "unite_legale": {
      "additionalProperties": false,
      "description": "Unité légale de l'organisme",
      "properties": {
        "actif": {
          "description": "Unité légale active",
          "type": "boolean",
        },
        "cessation": {
          "anyOf": [
            {
              "format": "date-time",
              "type": "string",
            },
            {
              "type": "null",
            },
          ],
          "description": "Date de cessation de l'unité légale",
        },
        "creation": {
          "description": "Date de création de l'unité légale",
          "format": "date-time",
          "type": "string",
        },
        "raison_sociale": {
          "description": "Raison sociale de l'unité légale",
          "type": "string",
        },
        "siren": {
          "description": "Numéro SIREN de l'unité légale",
          "type": "string",
        },
      },
      "required": [
        "siren",
        "actif",
        "raison_sociale",
        "creation",
        "cessation",
      ],
      "type": "object",
    },
  },
  "required": [
    "identifiant",
    "etablissement",
    "unite_legale",
    "renseignements_specifiques",
    "statut",
    "contacts",
  ],
  "type": "object",
}
`;

exports[`openapiSpec#models > should generate proper schema Pagination 1`] = `
{
  "additionalProperties": false,
  "description": "Informations de pagination",
  "properties": {
    "page_count": {
      "description": "Nombre total de pages",
      "minimum": 0,
      "type": "integer",
    },
    "page_index": {
      "description": "Numéro de la page actuelle",
      "minimum": 0,
      "type": "integer",
    },
    "page_size": {
      "description": "Nombre d'éléments par page",
      "maximum": 1000,
      "minimum": 1,
      "type": "integer",
    },
  },
  "required": [
    "page_count",
    "page_size",
    "page_index",
  ],
  "type": "object",
}
`;

exports[`openapiSpec#routes > should generate schema in sync with zod definition 1`] = `
{
  "get:/cabinet-avocat/v1/recherche": {
    "id": "get:/cabinet-avocat/v1/recherche",
    "method": "get",
    "operation": {
      "description": "Retourne les cabinets d'avocats filtres par SIRET, nom ou ville.",
      "operationId": "get_cabinet_avocat_v1_recherche",
      "parameters": [
        {
          "in": "query",
          "name": "siret",
          "required": false,
          "schema": {
            "description": "SIRET du cabinet",
            "pattern": "^\\d{14}$",
            "type": "string",
          },
        },
        {
          "allowEmptyValue": true,
          "in": "query",
          "name": "nom",
          "required": false,
          "schema": {
            "description": "Nom du cabinet",
            "type": "string",
          },
        },
        {
          "allowEmptyValue": true,
          "in": "query",
          "name": "ville",
          "required": false,
          "schema": {
            "description": "Ville du cabinet",
            "type": "string",
          },
        },
        {
          "in": "query",
          "name": "limit",
          "required": false,
          "schema": {
            "default": 20,
            "description": "Nombre maximal de resultats",
            "maximum": 100,
            "minimum": 1,
            "type": "number",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "description": "Liste des cabinets",
                "items": {
                  "$ref": "#/components/schemas/CabinetAvocat",
                },
                "type": "array",
              },
            },
          },
          "description": "Succes",
        },
        "400": {
          "$ref": "#/components/responses/BadRequest",
        },
        "401": {
          "$ref": "#/components/responses/Unauthorized",
        },
        "403": {
          "$ref": "#/components/responses/Forbidden",
        },
        "404": {
          "$ref": "#/components/responses/NotFound",
        },
        "409": {
          "$ref": "#/components/responses/Conflict",
        },
        "419": {
          "$ref": "#/components/responses/TooManyRequests",
        },
        "500": {
          "$ref": "#/components/responses/InternalServerError",
        },
        "502": {
          "$ref": "#/components/responses/BadGateway",
        },
        "503": {
          "$ref": "#/components/responses/ServiceUnavailable",
        },
      },
      "security": [
        {
          "api-key": [],
        },
      ],
      "summary": "Recherche de cabinets d'avocats",
      "tags": [
        "Cabinet Avocat",
      ],
    },
    "path": "/cabinet-avocat/v1/recherche",
  },
  "get:/healthcheck": {
    "id": "get:/healthcheck",
    "method": "get",
    "operation": {
      "operationId": "get_healthcheck",
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "env": {
                    "enum": [
                      "local",
                      "recette",
                      "production",
                      "preview",
                      "test",
                    ],
                    "type": "string",
                  },
                  "name": {
                    "type": "string",
                  },
                  "version": {
                    "type": "string",
                  },
                },
                "required": [
                  "name",
                  "version",
                  "env",
                ],
                "type": "object",
              },
            },
          },
          "description": "",
        },
        "400": {
          "$ref": "#/components/responses/BadRequest",
        },
        "401": {
          "$ref": "#/components/responses/Unauthorized",
        },
        "403": {
          "$ref": "#/components/responses/Forbidden",
        },
        "404": {
          "$ref": "#/components/responses/NotFound",
        },
        "409": {
          "$ref": "#/components/responses/Conflict",
        },
        "419": {
          "$ref": "#/components/responses/TooManyRequests",
        },
        "500": {
          "$ref": "#/components/responses/InternalServerError",
        },
        "502": {
          "$ref": "#/components/responses/BadGateway",
        },
        "503": {
          "$ref": "#/components/responses/ServiceUnavailable",
        },
      },
      "security": [],
      "tags": [
        "Système",
      ],
    },
    "path": "/healthcheck",
  },
  "get:/organisme/v1/export": {
    "id": "get:/organisme/v1/export",
    "method": "get",
    "operation": {
      "description": "Récupérer la liste de tous les organismes issus du référentiel Onisep historisé",
      "operationId": "get_organisme_v1_export",
      "parameters": [
        {
          "in": "query",
          "name": "page_size",
          "required": false,
          "schema": {
            "default": 100,
            "description": "Nombre d'éléments par page",
            "examples": [
              10,
            ],
            "maximum": 1000,
            "minimum": 1,
            "type": "integer",
          },
        },
        {
          "allowEmptyValue": true,
          "in": "query",
          "name": "page_index",
          "required": false,
          "schema": {
            "default": 0,
            "description": "Numéro de la page actuelle (commence à 0)",
            "examples": [
              12,
            ],
            "minimum": 0,
            "type": "integer",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "data": {
                    "description": "Liste des organismes",
                    "items": {
                      "$ref": "#/components/schemas/Organisme",
                    },
                    "type": "array",
                  },
                  "pagination": {
                    "$ref": "#/components/schemas/Pagination",
                  },
                },
                "required": [
                  "data",
                  "pagination",
                ],
                "type": "object",
              },
            },
          },
          "description": "Succès",
        },
        "400": {
          "$ref": "#/components/responses/BadRequest",
        },
        "401": {
          "$ref": "#/components/responses/Unauthorized",
        },
        "403": {
          "$ref": "#/components/responses/Forbidden",
        },
        "404": {
          "$ref": "#/components/responses/NotFound",
        },
        "409": {
          "$ref": "#/components/responses/Conflict",
        },
        "419": {
          "$ref": "#/components/responses/TooManyRequests",
        },
        "500": {
          "$ref": "#/components/responses/InternalServerError",
        },
        "502": {
          "$ref": "#/components/responses/BadGateway",
        },
        "503": {
          "$ref": "#/components/responses/ServiceUnavailable",
        },
      },
      "security": [
        {
          "api-key": [],
        },
      ],
      "summary": "Récupération des organismes de formation en apprentissage",
      "tags": [
        "Organismes",
      ],
    },
    "path": "/organisme/v1/export",
  },
  "get:/organisme/v1/recherche": {
    "id": "get:/organisme/v1/recherche",
    "method": "get",
    "operation": {
      "description": "Récupère la liste des organismes, filtrée par UAI et/ou SIRET fournis",
      "operationId": "get_organisme_v1_recherche",
      "parameters": [
        {
          "in": "query",
          "name": "uai",
          "required": false,
          "schema": {
            "anyOf": [
              {
                "pattern": "^\\d{7}[A-Z]$",
                "type": "string",
              },
              {
                "type": "null",
              },
            ],
            "description": "UAI de l'organisme à rechercher",
          },
        },
        {
          "in": "query",
          "name": "siret",
          "required": false,
          "schema": {
            "anyOf": [
              {
                "pattern": "^\\d{14}$",
                "type": "string",
              },
              {
                "type": "null",
              },
            ],
            "description": "SIRET de l'organisme à rechercher",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "candidats": {
                    "description": "Liste des organismes candidats correspondant aux critères de recherche",
                    "items": {
                      "additionalProperties": false,
                      "properties": {
                        "correspondances": {
                          "additionalProperties": false,
                          "description": "Informations sur les correspondances avec les critères de recherche",
                          "properties": {
                            "siret": {
                              "anyOf": [
                                {
                                  "additionalProperties": false,
                                  "properties": {
                                    "lui_meme": {
                                      "description": "Le SIRET de l'organisme correspond exactement à celui recherché",
                                      "type": "boolean",
                                    },
                                    "son_formateur": {
                                      "description": "Le SIRET d'un de ces formateurs correspond à celui recherché",
                                      "type": "boolean",
                                    },
                                    "son_responsable": {
                                      "description": "Le SIRET du responsable de l'organisme correspond à celui recherché",
                                      "type": "boolean",
                                    },
                                  },
                                  "required": [
                                    "son_formateur",
                                    "son_responsable",
                                    "lui_meme",
                                  ],
                                  "type": "object",
                                },
                                {
                                  "description": "Aucune recherche par SIRET n'a été effectuée",
                                  "type": "null",
                                },
                              ],
                              "description": "Informations sur les correspondances SIRET",
                            },
                            "uai": {
                              "anyOf": [
                                {
                                  "additionalProperties": false,
                                  "properties": {
                                    "lui_meme": {
                                      "description": "L'UAI de l'organisme correspond exactement à celui recherché",
                                      "type": "boolean",
                                    },
                                    "son_lieu": {
                                      "description": "L'UAI d'un de ces lieux correspond à celui recherché",
                                      "type": "boolean",
                                    },
                                  },
                                  "required": [
                                    "lui_meme",
                                    "son_lieu",
                                  ],
                                  "type": "object",
                                },
                                {
                                  "description": "Aucune recherche par UAI n'a été effectuée",
                                  "type": "null",
                                },
                              ],
                              "description": "Informations sur les correspondances UAI",
                            },
                          },
                          "required": [
                            "uai",
                            "siret",
                          ],
                          "type": "object",
                        },
                        "organisme": {
                          "additionalProperties": false,
                          "description": "Référence de l'organisme",
                          "properties": {
                            "identifiant": {
                              "additionalProperties": false,
                              "description": "Identifiant de l'organisme",
                              "properties": {
                                "siret": {
                                  "description": "Numéro SIRET de l'organisme",
                                  "pattern": "^\\d{14}$",
                                  "type": "string",
                                },
                                "uai": {
                                  "anyOf": [
                                    {
                                      "pattern": "^\\d{7}[A-Z]$",
                                      "type": "string",
                                    },
                                    {
                                      "type": "null",
                                    },
                                  ],
                                  "description": "Numéro UAI de l'organisme",
                                },
                              },
                              "required": [
                                "uai",
                                "siret",
                              ],
                              "type": "object",
                            },
                          },
                          "required": [
                            "identifiant",
                          ],
                          "type": "object",
                        },
                        "status": {
                          "additionalProperties": false,
                          "description": "Statut référencementiel de l'organisme",
                          "properties": {
                            "declaration_catalogue": {
                              "description": "Indique si l'organisme est présent dans le "Catalogue des formations en apprentissage"",
                              "type": "boolean",
                            },
                            "ouvert": {
                              "description": "Indique si l'organisme est ouvert (état administratif actif)",
                              "type": "boolean",
                            },
                            "validation_uai": {
                              "description": "Indique si l'UAI de l'organisme est validée par le Référentiel des Organismes de Formation",
                              "type": "boolean",
                            },
                          },
                          "required": [
                            "ouvert",
                            "declaration_catalogue",
                            "validation_uai",
                          ],
                          "type": "object",
                        },
                      },
                      "required": [
                        "status",
                        "correspondances",
                        "organisme",
                      ],
                      "type": "object",
                    },
                    "type": "array",
                  },
                  "metadata": {
                    "additionalProperties": false,
                    "description": "Métadonnées sur les critères de recherche effectuée",
                    "properties": {
                      "siret": {
                        "anyOf": [
                          {
                            "additionalProperties": false,
                            "properties": {
                              "status": {
                                "enum": [
                                  "inconnu",
                                  "fermé",
                                  "ok",
                                ],
                                "type": "string",
                              },
                            },
                            "required": [
                              "status",
                            ],
                            "type": "object",
                          },
                          {
                            "type": "null",
                          },
                        ],
                        "description": "Metadata sur le SIRET de recherche",
                      },
                      "uai": {
                        "anyOf": [
                          {
                            "additionalProperties": false,
                            "properties": {
                              "status": {
                                "enum": [
                                  "inconnu",
                                  "ok",
                                ],
                                "type": "string",
                              },
                            },
                            "required": [
                              "status",
                            ],
                            "type": "object",
                          },
                          {
                            "type": "null",
                          },
                        ],
                        "description": "Metadata sur l'UAI de recherche",
                      },
                    },
                    "required": [
                      "uai",
                      "siret",
                    ],
                    "type": "object",
                  },
                  "resultat": {
                    "anyOf": [
                      {
                        "additionalProperties": false,
                        "properties": {
                          "correspondances": {
                            "additionalProperties": false,
                            "description": "Informations sur les correspondances avec les critères de recherche",
                            "properties": {
                              "siret": {
                                "anyOf": [
                                  {
                                    "additionalProperties": false,
                                    "properties": {
                                      "lui_meme": {
                                        "description": "Le SIRET de l'organisme correspond exactement à celui recherché",
                                        "type": "boolean",
                                      },
                                      "son_formateur": {
                                        "description": "Le SIRET d'un de ces formateurs correspond à celui recherché",
                                        "type": "boolean",
                                      },
                                      "son_responsable": {
                                        "description": "Le SIRET du responsable de l'organisme correspond à celui recherché",
                                        "type": "boolean",
                                      },
                                    },
                                    "required": [
                                      "son_formateur",
                                      "son_responsable",
                                      "lui_meme",
                                    ],
                                    "type": "object",
                                  },
                                  {
                                    "description": "Aucune recherche par SIRET n'a été effectuée",
                                    "type": "null",
                                  },
                                ],
                                "description": "Informations sur les correspondances SIRET",
                              },
                              "uai": {
                                "anyOf": [
                                  {
                                    "additionalProperties": false,
                                    "properties": {
                                      "lui_meme": {
                                        "description": "L'UAI de l'organisme correspond exactement à celui recherché",
                                        "type": "boolean",
                                      },
                                      "son_lieu": {
                                        "description": "L'UAI d'un de ces lieux correspond à celui recherché",
                                        "type": "boolean",
                                      },
                                    },
                                    "required": [
                                      "lui_meme",
                                      "son_lieu",
                                    ],
                                    "type": "object",
                                  },
                                  {
                                    "description": "Aucune recherche par UAI n'a été effectuée",
                                    "type": "null",
                                  },
                                ],
                                "description": "Informations sur les correspondances UAI",
                              },
                            },
                            "required": [
                              "uai",
                              "siret",
                            ],
                            "type": "object",
                          },
                          "organisme": {
                            "additionalProperties": false,
                            "description": "Référence de l'organisme",
                            "properties": {
                              "identifiant": {
                                "additionalProperties": false,
                                "description": "Identifiant de l'organisme",
                                "properties": {
                                  "siret": {
                                    "description": "Numéro SIRET de l'organisme",
                                    "pattern": "^\\d{14}$",
                                    "type": "string",
                                  },
                                  "uai": {
                                    "anyOf": [
                                      {
                                        "pattern": "^\\d{7}[A-Z]$",
                                        "type": "string",
                                      },
                                      {
                                        "type": "null",
                                      },
                                    ],
                                    "description": "Numéro UAI de l'organisme",
                                  },
                                },
                                "required": [
                                  "uai",
                                  "siret",
                                ],
                                "type": "object",
                              },
                            },
                            "required": [
                              "identifiant",
                            ],
                            "type": "object",
                          },
                          "status": {
                            "additionalProperties": false,
                            "description": "Statut référencementiel de l'organisme",
                            "properties": {
                              "declaration_catalogue": {
                                "description": "Indique si l'organisme est présent dans le "Catalogue des formations en apprentissage"",
                                "type": "boolean",
                              },
                              "ouvert": {
                                "description": "Indique si l'organisme est ouvert (état administratif actif)",
                                "type": "boolean",
                              },
                              "validation_uai": {
                                "description": "Indique si l'UAI de l'organisme est validée par le Référentiel des Organismes de Formation",
                                "type": "boolean",
                              },
                            },
                            "required": [
                              "ouvert",
                              "declaration_catalogue",
                              "validation_uai",
                            ],
                            "type": "object",
                          },
                        },
                        "required": [
                          "status",
                          "correspondances",
                          "organisme",
                        ],
                        "type": "object",
                      },
                      {
                        "type": "null",
                      },
                    ],
                    "description": "Meilleur résultat correspondant aux critères de recherche. Peut être null si aucun résultat sastisfaisant n'est trouvé.",
                  },
                },
                "required": [
                  "metadata",
                  "resultat",
                  "candidats",
                ],
                "type": "object",
              },
            },
          },
          "description": "Succès",
        },
        "400": {
          "$ref": "#/components/responses/BadRequest",
        },
        "401": {
          "$ref": "#/components/responses/Unauthorized",
        },
        "403": {
          "$ref": "#/components/responses/Forbidden",
        },
        "404": {
          "$ref": "#/components/responses/NotFound",
        },
        "409": {
          "$ref": "#/components/responses/Conflict",
        },
        "419": {
          "$ref": "#/components/responses/TooManyRequests",
        },
        "500": {
          "$ref": "#/components/responses/InternalServerError",
        },
        "502": {
          "$ref": "#/components/responses/BadGateway",
        },
        "503": {
          "$ref": "#/components/responses/ServiceUnavailable",
        },
      },
      "security": [
        {
          "api-key": [],
        },
      ],
      "summary": "Recherche d'organismes par UAI et/ou SIRET",
      "tags": [
        "Organismes",
      ],
    },
    "path": "/organisme/v1/recherche",
  },
}
`;
